# Dfautotrans

./: .cursorrules  PROJECT_RULES.md  PROJECT_RULES_EN.md  README.md  README_運行指南.md  auto_trader_development_doc.md  continuous_trading_system.py  debug_dom_structure.py  debug_inventory_page.py  debug_listing_test.py  debug_market_page.html  debug_market_scan.py  debug_withdraw_storage.py  demo_market_buy_test.py  demo_stage1.py  demo_stage2_bank.py  demo_stage2_inventory.py  demo_stage2_market.py  demo_stage2_simple.py  demo_stage2_smart_login.py  demo_stage2_smart_login_and_goto_bank.py  demo_stage3_trading_engine.py  demo_stage3_with_detailed_logging.py  demo_trading_config.py  dfautotrans.db  env.example  find_status_elements.py  main.py  marketplace_helper.js  openmemory-mcp-rules.md  pyproject.toml  simple_storage_test.py  step1_instructions.md  step1_marketplace_searcher.js  storage_page.html  trading_config.json
.cursor/rules/: mcp-calling-rules.mdc  openmemory-mcp-rule.mdc  playwright-mcp-rules.mdc
cache/cookies/: cookies.json  session.json
docs/: implementation_plan.md  login_refactoring_summary.md  python_architecture_design.md  trading_config_guide.md  trading_engine_design.md  trading_workflow.md
js/: step2_auto_seller.js
logs/: trading_data.jsonl
src/dfautotrans/: __init__.py
src/dfautotrans/api/: __init__.py
src/dfautotrans/automation/: __init__.py  login_handler.py  (+6 more)
tests/: __init__.py  test_environment.py  test_login_handler.py  test_refactored_login.py  test_stage1_infrastructure.py  test_stage2_login_demo.py  test_stage3_implementation.py
(+16 files in other folders)
